# hermes-agent

./: .dockerignore  .env.example  .gitignore  .gitmodules  CLAUDE.md  Dockerfile  Makefile  README.md  conftest.py  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yaml  release-opencode.yaml  release.yaml
docs/: overview.md
hermes_home/: config.yaml
migrations/: 001_initial_schema.sql  002_team_chat_v4.sql  003_channels_feature_scope.sql  004_cta_suggestions.sql  005_session_id_uuid.sql  006_model_catalog.sql  007_add_dm_session_kind.sql  008_session_reads.sql  009_reply_and_thread.sql  010_message_image_ids.sql  011_message_reactions_saves.sql  012_message_file_ids.sql
plugins/: __init__.py  context.py  db.py  document_repo.py  feature_context.py  github_pr_client.py  hooks.py  mcp_client.py  plugin.yaml  storage_service_client.py  validation.py
plugins/auth/: bff_identity.py
plugins/clients/: github_pr_client.py  mcp_client.py  storage_service_client.py  vcs_client.py
plugins/skills/: __init__.py  index.py  shared.md
plugins/tools/: approval.py  approve.py  artifacts.py  commit_files.py  create_pr.py  create_tasks.py  deferred.py  edit.py  ensure_branch.py  feature.py  feature_context.py  file_ops.py  git_ops.py  github_pr_context.py  github_pr_review.py  gitnexus.py  guardrails.py  init_feature.py  list_documents.py  local_file_ops.py  lookup_feature.py  model_resolution.py  move_feature.py  parse_tasks.py  rag.py  read.py  read_uploaded_file.py  read_workspace_file.py  skills.py  suggest_next_actions.py  tasks.py  tasks_write.py  terminal.py  vcs_pr_context.py  vcs_pr_review.py  workspace.py
profiles/: __init__.py
profiles/coding/: __init__.py  setup.py
profiles/tools/: __init__.py
profiles/workflow/: __init__.py  setup.py
scripts/: release.py  sync-submodules.sh
src/: __init__.py  app.py  tool_setup.py
src/api/: __init__.py  agent_dispatch.py  coding_identity.py  deps.py  generate_feature_name.py  identity.py  mentions.py  model_catalog.py  router.py  scope_guard.py  thread_authz.py  triage.py
src/db/: __init__.py  models.py  session_db_proxy.py  store.py  store_v4.py
src/mcp/: __init__.py  coding_bridge_server.py
src/realtime/: __init__.py  bus.py  user_bus.py
src/services/: approval_notifications.py  author_resolver.py  bff_client.py  cost_client.py  deferred_tool_gateway.py  notification_client.py  opencode_client.py  platform_role_client.py  user_service_client.py  vcs_service_client.py  workflow_backend_client.py  workflow_db_client.py
src/streaming/: __init__.py  bus_translator.py  sse.py
tests/: test_claude_md.py
tests/plugins/: test_approval.py  test_approve.py  test_approve_t5.py  test_bff_identity.py  test_commit_files.py  test_context.py  test_create_pr.py  test_create_tasks.py  test_create_tasks_t6.py  test_document_repo.py  test_e2e.py  test_e2e_t7.py  test_ensure_branch.py  test_feature_context.py  test_file_ops.py  test_github_pr_context.py  test_github_pr_review.py  test_guardrails.py  test_guardrails_dispatch.py  test_guardrails_edge_cases.py  test_guardrails_integration.py  test_ide_tools.py  test_init_feature.py  test_init_pr_branch.py  test_model_resolution.py  test_move_feature.py  test_owner_guard.py  test_parse_tasks.py  test_read_file.py  test_read_workspace_file.py  test_result_sanitization.py  test_session_context_isolation.py  test_storage_service_client.py  test_suggest_next_actions.py  test_suggest_next_actions_integration.py  test_vcs_pr_context.py  test_vcs_pr_review.py  test_workflow_lookup_feature.py  test_workflow_plugin.py  test_workflow_plugin_t3.py  (+5 more)
tests/profiles/: test_coding_tools.py
tests/src/: test_admin_models.py  test_agent_dispatch_thread.py  test_approval_notifications.py  test_can_view_session.py  test_cancel.py  test_channels.py  test_clarify_resolution.py  test_coding_bridge_server.py  test_coding_chat.py  test_coding_identity.py  test_coding_mcp_bridge_mount.py  test_coding_version.py  test_cta_suggestions_store.py  test_deferred_tool_gateway.py  test_dms.py  test_edit_delete_messages.py  test_feature_participants.py  test_forward_message.py  test_generate_feature_name.py  test_message_reactions_saves_model.py  test_message_saves_api.py  test_message_threads_api.py  test_metering_parity.py  test_model_catalog.py  test_notification_client.py  test_notification_stream.py  test_notification_wiring.py  test_opencode_client.py  test_quota_cost.py  test_reaction_endpoint.py  (+20 more)
workflow_gateway/: .env.example  Dockerfile  Makefile  README.md  __init__.py  app.py
workflow_plugin/: __init__.py  client.py  context.py  db.py  hooks.py  mcp_client.py  plugin.yaml  tools.py
(+102 files in other folders)
