[build-system]
requires = ["setuptools>=77.0,<83"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-workflow-gateway"
version = "0.1.0"
description = "FastAPI workflow gateway and plugin for the digital-factory M3 agent chat, built on hermes-agent."
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
  "hermes-agent[anthropic]",
  "fastapi",
  "uvicorn[standard]",
]

[project.optional-dependencies]
workflow-gateway = [
  "asyncpg==0.31.0",
  "sqlalchemy[asyncio]>=2.0,<3",
  "psycopg[binary]==3.3.4",
  "mcp==1.27.2",
]

[tool.setuptools.packages.find]
include = ["src*", "plugins*"]

[tool.uv]
constraint-dependencies = ["pygments>=2.20.0"]

[tool.uv.sources]
hermes-agent = { path = "vendor/hermes-agent", editable = true }

[tool.ruff]
# Don't lint the vendored upstream submodule — it has its own tooling/config.
extend-exclude = ["vendor"]
