[build-system]
requires = ["setuptools>=77.0,<83"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-workflow-gateway"
version = "0.1.0"
description = "FastAPI workflow gateway and plugin for the digital-factory M3 agent chat, built on hermes-agent."
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
  "hermes-agent[anthropic]",
  "fastapi",
  "uvicorn[standard]",
  "PyPDF2>=3.0.0",
  "python-docx>=1.0.0",
  "openpyxl>=3.1.0",
]

[project.optional-dependencies]
workflow-gateway = [
  "asyncpg==0.31.0",
  "sqlalchemy[asyncio]>=2.0,<3",
  "psycopg[binary]==3.3.4",
  "mcp==1.28.0",
  "aiohttp==3.13.3",
]

[tool.setuptools.packages.find]
include = ["src*", "plugins*", "profiles*"]

[tool.uv]
constraint-dependencies = ["pygments>=2.20.0"]

[tool.uv.sources]
hermes-agent = { path = "vendor/hermes-agent", editable = true }

[tool.pytest.ini_options]
asyncio_mode = "strict"
markers = [
    "integration: tests that require external services (Postgres, Redis, etc.)",
]
# Exclude integration tests by default; run with -m integration to include them.
addopts = "-m 'not integration'"

[tool.ruff]
# Don't lint the vendored upstream submodule — it has its own tooling/config.
extend-exclude = ["vendor"]

[tool.ruff.lint]
ignore = [
    "BLE001",
]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query"]

[dependency-groups]
dev = [
    "aiohttp>=3.13.3",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-timeout>=2.4.0",
]
